<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarCultivo">

    <RelativeLayout
        android:id="@+id/contenedor_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titulo_nombre_cultivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_cultivo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"/>

        <EditText
            android:id="@+id/nombre_cultivo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/titulo_nombre_cultivo"
            android:hint="@string/nombre_cultivo"
            android:layout_marginHorizontal="20dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/titulo_info_cultivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre_cultivo"
            android:text="@string/info_cultivo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"/>

        <EditText
            android:id="@+id/info_cultivo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/titulo_info_cultivo"
            android:hint="@string/info_cultivo"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/titulo_tipo_cultivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_cultivo"
            android:text="@string/tipo_cultivo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"/>

        <EditText
            android:id="@+id/tipo_cultivo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/titulo_tipo_cultivo"
            android:hint="@string/tipo_cultivo"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/titulo_img_cultivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipo_cultivo"
            android:text="@string/imagen_cultivo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"/>

        <EditText
            android:id="@+id/link_imagen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/titulo_img_cultivo"
            android:hint="@string/hint_imagen"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/titulo_temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link_imagen"
            android:text="@string/temperatura_cultivo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"/>

        <RadioGroup
            android:id="@+id/radius_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_temperatura"
            android:paddingHorizontal="20dp">

            <RadioButton
                android:id="@+id/opc1_temp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rango_temp_0"
                android:onClick="btnTempClicked"/>

            <RadioButton
                android:id="@+id/opc2_temp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rango_temp_1"
                android:onClick="btnTempClicked"/>

            <RadioButton
                android:id="@+id/opc3_temp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rango_temp_2"
                android:onClick="btnTempClicked"/>

            <RadioButton
                android:id="@+id/opc4_temp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rango_temp_3"
                android:onClick="btnTempClicked"/>

            <RadioButton
                android:id="@+id/opc5_temp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rango_temp_4"
                android:onClick="btnTempClicked"/>

        </RadioGroup>

        <TextView
            android:id="@+id/titulo_estacion_cultivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radius_temp"
            android:text="@string/estacion_cultivo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"/>

        <RadioGroup
            android:id="@+id/radius_est"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_estacion_cultivo"
            android:paddingHorizontal="20dp">

            <RadioButton
                android:id="@+id/opc1_est"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/est_verano"
                android:onClick="btnEstacClicked"/>

            <RadioButton
                android:id="@+id/opc2_est"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/est_otono"
                android:onClick="btnEstacClicked"/>

            <RadioButton
                android:id="@+id/opc3_est"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/est_invierno"
                android:onClick="btnEstacClicked"/>

            <RadioButton
                android:id="@+id/opc4_est"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/est_primavera"
                android:onClick="btnEstacClicked"/>

        </RadioGroup>


        <TextView
            android:id="@+id/titulo_region_cultivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radius_est"
            android:text="@string/region_cultivo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"/>


        <RadioGroup
            android:id="@+id/radius_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_region_cultivo"
            android:paddingHorizontal="20dp">

            <RadioButton
                android:id="@+id/opc1_reg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/reg_norte"
                android:onClick="btnRegClicked"/>

            <RadioButton
                android:id="@+id/opc2_reg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/reg_centro"
                android:onClick="btnRegClicked"/>

            <RadioButton
                android:id="@+id/opc3_reg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/reg_cuyo"
                android:onClick="btnRegClicked"/>

            <RadioButton
                android:id="@+id/opc4_reg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/reg_patagonica"
                android:onClick="btnRegClicked"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_guardar_cultivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radius_region"
            android:layout_marginVertical="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_cultivo"
            android:background="@drawable/btn_verde"
            android:textColor="@color/white"
            android:onClick="agregarCultivoNvo"/>


    </RelativeLayout>


</ScrollView>